[package]
name = "remo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
serde = { version = "*", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = "*"
